tests/semantic/fact_number/fact_number.err
Error: Head argument is not a subtype of its declared type in file fact_number.dl at line 8
F(1000,"0002").
--^-------------
1 errors generated, evaluation aborted
